# rentals

./: .envrc.example  .gitignore  Changelog.md  Makefile  README.md  default.nix  flake.nix  init.sql  package.yaml  rentals.cabal  shell.nix  stack.yaml
.github/workflows/: nix.yaml
app/: Main.hs
config/: models.persistentmodels  routes.yesodroutes  settings.yml  settings.yml.template
migrations/down/: 20240104_165742-initial.down.sql  20241020_193352-add-currency.down.sql  20260408-add-guest-pricing.down.sql
migrations/up/: 20240104_165742-initial.sql  20241020_193352-add-currency.sql  20260408-add-guest-pricing.sql
nix/: hpkgs.nix
npins/: sources.json
src/: Application.hs  Foundation.hs  Settings.hs  Utils.hs
src/Handler/: Admin.hs  Home.hs  Listing.hs
src/Handler/Admin/: Export.hs  Import.hs  Listing.hs
src/Handler/User/: Booking.hs  Internal.hs  Listing.hs  User.hs
src/Handler/View/: Admin.hs  Listings.hs
src/Rentals/: Application.hs  Calendar.hs  Currency.hs  Database.hs  Foundation.hs  ICallImporter.hs  JSON.hs  Orphans.hs  Settings.hs  Tshow.hs  Utils.hs  Widget.hs
src/Rentals/Database/: Checkout.hs  Event.hs  Import.hs  Listing.hs  ListingImage.hs  Migration.hs  Money.hs  Source.hs
src/Rentals/Handler/Admin/: Export.hs  Import.hs  Listing.hs
src/Rentals/Handler/User/: Booking.hs  Internal.hs  Listing.hs  User.hs
src/Rentals/Handler/View/: Admin.hs  Booking.hs  Listings.hs
templates/: admin.hamlet  default-email-layout.hamlet  default-layout.hamlet  error.hamlet  home.hamlet  listings.hamlet
templates/admin/: admin.hamlet  compose-email.hamlet  listing.hamlet  listings.hamlet  login.hamlet  new-listing.hamlet
templates/email/: book-alert.hamlet  book-confirm.hamlet  success-email.hamlet
templates/listing/: book.hamlet  bookform.hamlet
templates/script/: admin-datepicker.julius  form-handler.julius
templates/script/admin/: admin-forms.julius  datepicker.julius  forms.julius  new-listing.julius
templates/script/user/: datepicker.julius  forms.julius
templates/style/: admin.lucius  user.lucius
templates/user/: book-success.hamlet  listing.hamlet  listings.hamlet
test/: BookingSpec.hs  EmailSpec.hs  GuestPricingSpec.hs  Spec.hs  TestFoundation.hs  UnavailableDatesSpec.hs
