cabal-version:      3.0

name:               rentals
maintainer:         hi@jappie.me
category:           Application
version:            0.0.3
build-type:         Simple
license:            AGPL-3.0-only
license-file:       LICENSE
synopsis:           A rental management web app
description:
  A self hosted airbnb like rental system.
  The major advantage is that
  it's a fixed hosting costs instead of payment per booking,
  which would be around $50 per month if done by a third party,
  or if done by yourself whatever price you can rent the hardware.
  Which may range from 2 to 10 dollars.

extra-source-files:
  templates/**/*.hamlet
  templates/script/**/*.julius
  migrations/up/*.sql
  Changelog.md

-- templates/style/**/*.cassius

source-repository head
  type: git
  location: https://github.com/jappeace/rentals

common common-options
  default-extensions:
    OverloadedStrings
    TemplateHaskell
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    MultiParamTypeClasses
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    TupleSections
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    TypeApplications
    NumericUnderscores
    ImportQualifiedPost

  ghc-options:
    -O2 -Wall -Werror -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -fwarn-tabs -Wpartial-fields
    -fdefer-diagnostics -Wunused-packages
    -fenable-th-splice-warnings
    -fno-omit-yields

  build-depends:
      base >=4.17 && <4.22

  default-language: Haskell2010

library
  import: common-options
  exposed-modules:
    Rentals.Application
    Rentals.ICallImporter
    Rentals.Calendar
    Rentals.Database
    Rentals.Database.Checkout
    Rentals.Database.Event
    Rentals.Database.Import
    Rentals.Database.Listing
    Rentals.Database.ListingImage
    Rentals.Database.Money
    Rentals.Database.Source
    Rentals.Database.Migration
    Rentals.Foundation
    Rentals.Handler.Admin.Export
    Rentals.Handler.Admin.Import
    Rentals.Handler.Admin.Listing
    Rentals.Handler.User.Booking
    Rentals.Handler.User.Internal
    Rentals.Widget
    Rentals.Handler.View.Admin
    Rentals.Handler.View.Booking
    Rentals.Handler.View.Listings
    Rentals.JSON
    Rentals.Orphans
    Rentals.Settings
    Rentals.Tshow
    Rentals.Currency

  other-modules:      Paths_rentals
  autogen-modules:    Paths_rentals
  hs-source-dirs:     src

  build-depends:
    , aeson              >=2.1.2  && <2.2
    , annotated-exception >= 0.2.0.5 && <0.2.1
    , cron
    , blaze-html         >=0.9.1  && <0.10
    , blaze-markup       >=0.8.3  && <0.9
    , bytestring         >=0.11.5 && <0.12
    , case-insensitive   >=1.2.1  && <1.3
    , containers         >=0.6.7  && <0.7
    , data-default       >=0.7.1  && <0.8
    , directory          >=1.3.7  && <1.4
    , filepath           >=1.4.2  && <1.5
    , http-client        >=0.7.15 && <0.8
    , http-types         >=0.12.3 && <0.13
    , iCalendar          >=0.4.0  && <0.5
    , lens               >=5.2.3  && <5.3
    , mail-pool          >=2.3.1  && <2.4
    , mime-mail          >=0.5.1  && <0.6
    , monad-logger       >=0.3.40 && <0.4
    , mtl                >=2.2.2  && <2.3
    , network-uri        >=2.6.4  && <2.7
    , path-pieces        >=0.2.1  && <0.3
    , persistent         >=2.14.6 && <2.15
    , persistent-postgresql >=2.13.2 && <2.14
    , random             >=1.2.1  && <1.3
    , resource-pool
    , postgresql-simple
    , postgresql-migration
    , unliftio-core
    , neat-interpolation
    , shakespeare        >=2.1.0  && <2.2
    , slugify            >=0.1.0  && <0.2
    , stripeapi          >=3.0.0  && <3.1
    , text               >=2.0.2  && <2.1
    , time               >=1.12.2 && <1.13
    , transformers       >=0.5.6  && <0.6
    , uuid               >=1.3.15 && <1.4
    , wai-cors           >=0.2.7  && <0.3
    , warp               >=3.3.25 && <3.4
    , wreq               >=0.5.4  && <0.6
    , yesod              >=1.6.2  && <1.7
    , yesod-auth         >=1.6.11 && <1.7
    , yesod-core         >=1.6.25 && <1.7
    , template-haskell

executable rentals
  import: common-options
  main-is:            Main.hs
  other-modules:      Paths_rentals
  hs-source-dirs:     app

  ghc-options:
    -Wno-unused-packages
    -threaded -rtsopts "-with-rtsopts=-N -M7G -T"

  build-depends:
    , aeson
    , blaze-markup
    , bytestring
    , case-insensitive
    , containers
    , data-default
    , directory
    , filepath
    , http-client
    , http-types
    , iCalendar
    , lens
    , monad-logger
    , mtl
    , network-uri
    , persistent
    , persistent-sqlite
    , random
    , rentals
    , shakespeare
    , slugify
    , stripeapi
    , text
    , time
    , transformers
    , uuid
    , wai-cors
    , warp
    , wreq
    , yesod
    , yesod-auth

test-suite rentals-test
  import: common-options
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:
    TestFoundation
    BookingSpec
    EmailSpec
    UnavailableDatesSpec

  ghc-options:
    -Wno-unused-packages
    -threaded -rtsopts

  build-depends:
    , rentals
    , hspec
    , yesod-test
    , yesod-core
    , yesod
    , persistent
    , persistent-sqlite
    , text
    , time
    , uuid
    , mail-pool
    , mime-mail
    , monad-logger
    , directory
    , aeson
    , bytestring
    , http-types
    , yesod-auth
